benefits back, no vercel

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       fetch('./src/partials/quote.html')
         .then(response => response.text())
         .then(data => document.getElementById('quote').innerHTML = data);
-      fetch('./public/benefits.html')
+      fetch('./src/partials/benefits.html')
         .then(response => response.text())
         .then(data => document.getElementById('benefits').innerHTML = data);
       fetch('./src/partials/quote.html')
