--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="./src/styles/main.css" />
   </head>
-  <body class="no-scroll">
+  <body>
     <div id="header"></div>
 
     <main>
@@ -33,6 +33,6 @@
 
     <div id="footer"></div>
 
-    <script src="./main.js" defer></script>
+    <script type="module" src="./main.js" defer></script>
   </body>
 </html>
