--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/accordion-js@3.4.0/dist/accordion.min.css"
+    />
     <link rel="stylesheet" href="./src/styles/main.css" />
   </head>
   <body>
@@ -33,6 +37,10 @@
 
     <div id="footer"></div>
 
+    <script
+      async
+      src="https://unpkg.com/accordion-js@3.4.0/dist/accordion.min.js"
+    ></script>
     <script type="module" src="./main.js" defer></script>
   </body>
 </html>
